remove construtores deprecated e limpa utilitarios nao usados
- Substitui new Integer/Long/Double() por valueOf()/parseInt()/parseLong() em BirtEngine, FormatDate, FormatNumber, PassGenerator e Util
- Remove todos os metodos inutilizados de FormatDate (deprecated wrappers, aritmetica de datas, parse de Timestamp/Time)
- Remove metodos inutilizados de FormatNumber (currency, percent, parseInt(double), toInt duplicado, todos os fillMode)
- Exclui jackson-module-jaxb-annotations do fat JAR para corrigir ClassNotFoundException no JDK 11
- Remove hibernate.dialect do persistence.xml (H2 e detectado automaticamente pelo Hibernate 6)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>